# QuotaGem

./: .gitignore  HANDOFF.md  README.en.md  README.md  README.zh-CN.md  README.zh-TW.md  REPO_READINESS_REPORT.md  build_exe.ps1  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
agy-monitor/: agy-usage.jsonl  check_quota.py
docs/: release-checklist.md  screenshot-guide.md
openspec/changes/tray-usage-widget/: design.md  proposal.md  tasks.md
openspec/changes/tray-usage-widget/specs/compact-pinned-widget/: spec.md
openspec/changes/tray-usage-widget/specs/provider-usage-ingestion/: spec.md
openspec/changes/tray-usage-widget/specs/tray-widget-controls/: spec.md
openspec/changes/tray-usage-widget/specs/unified-usage-panel/: spec.md
scripts/: package-portable.ps1
src/: ipc.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: alerts.rs  diag.rs  lib.rs  main.rs  models.rs  provider.rs  refresh.rs  system.rs  tray.rs  windows.rs
src-tauri/src/providers/: antigravity.rs  claude.rs  codex.rs  mod.rs
src/main/: antigravity-service.test.ts  antigravity-service.ts  expanded-layout.test.ts  expanded-layout.ts  launch-at-login.test.ts  launch-at-login.ts  main.ts  panel-layout.test.ts  panel-layout.ts  preload.test.ts  preload.ts  provider-service.ts  runtime-paths.test.ts  runtime-paths.ts  source-artifacts.test.ts  usage-alerts.test.ts  usage-alerts.ts
src/providers/: agy.test.ts  agy.ts  antigravity.test.ts  antigravity.ts  claude.test.ts  claude.ts  codex.test.ts  codex.ts  gemini.test.ts  gemini.ts  index.test.ts  index.ts
src/providers/__fixtures__/: agy-quota-summary.json
src/renderer/: App.test.tsx  App.tsx  LoginPage.test.tsx  LoginPage.tsx  UsagePanel.test.tsx  UsagePanel.tsx  main.tsx  styles.css  styles.test.ts  vite-env.d.ts
src/shared/: brand-assets.test.ts  dashboard.ts  i18n-usage-labels.test.ts  i18n.test.ts  i18n.ts  panel-scale.test.ts  panel-scale.ts  panel-themes.test.ts  panel-themes.ts  provider-visibility.test.ts  provider-visibility.ts  usage-groups.test.ts  usage.test.ts  usage.ts
src/test/: tauri-single-instance.test.ts
